# ROS2_Study

./: README.md
snt_robot_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
snt_robot_bringup/launch/: snt_robot_bringup_pc.launch.py  snt_robot_bringup_raspi.launch.py
snt_robot_config/: .setup_assistant  CMakeLists.txt  package.xml
snt_robot_config/config/: SNTRobot.ros2_control.xacro  SNTRobot.srdf  SNTRobot.urdf  SNTRobot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
snt_robot_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  snt_ros2_control.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
snt_robot_control/: CMakeLists.txt  package.xml
snt_robot_control/src/: snt_fjt_server.cpp  snt_traj_check.cpp
snt_robot_description/: CMakeLists.txt  package.xml
snt_robot_description/urdf/: SNTRobot.urdf
snt_robot_description/xacro/: SNTRobot.urdf.xacro
snt_robot_driver/: CMakeLists.txt  package.xml  plugin.xml  snt_robot_driver.xml
snt_robot_driver/src/: snt_robot_driver.cpp
snt_robot_rviz/: CMakeLists.txt  package.xml
snt_robot_rviz/launch/: snt_robot_rviz.launch.py
