<?xml version="1.0"?>
<package format="3">
  <name>snt_robot_driver</name>
  <version>0.1.0</version>
  <description>Simple simulated hardware interface for SNT robot</description>
  <maintainer email="you@todo.todo">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>